# chatllm

./: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: api_log.rs  chat.rs  export.rs  file_ops.rs  keyring_ops.rs  messages.rs  mod.rs  model_config.rs  sessions.rs  terminal.rs  web_search.rs
src-tauri/src/models/: api_log.rs  chat_message.rs  mod.rs  model_config.rs  search_config.rs  session.rs  stream_event.rs
src-tauri/src/services/: llm_client.rs  mod.rs  sse_parser.rs  stream_manager.rs  tools.rs
src-tauri/src/terminal/: ai_shell.rs  mod.rs  pty_manager.rs  session.rs
src/assets/styles/: globals.css
src/components/chat/: ChatView.vue  MessageActions.vue  MessageContent.vue  MessageItem.vue  MessageList.vue  StreamingIndicator.vue  ToolCallBlock.vue
src/components/input/: AttachmentPreview.vue  ChatInput.vue  ContextSlider.vue  FileDropZone.vue
src/components/layout/: AppSidebar.vue  MainLayout.vue  ThemeToggle.vue  TitleBar.vue
src/components/logs/: ApiLogDetail.vue  (+1 more)
src/composables/: useAutoScroll.ts  useAvatar.ts  useFileUpload.ts  useI18n.ts  useModelSelection.ts  useStreamListener.ts  useTheme.ts
src/lib/: markdown.ts  sse-types.ts  utils.ts
src/router/: index.ts
src/stores/: chatStore.ts  sessionStore.ts  settingsStore.ts  streamStore.ts
src/types/: chat.ts  log.ts  model.ts  session.ts
(+8 files in other folders)
