[package]
name = "chatllm"
version = "0.1.0"
description = "Desktop AI Chat Application"
authors = ["you"]
edition = "2021"

[lib]
name = "chatllm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
portable-pty = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
base64 = "0.22"
